<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screenbg"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="120dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_marginTop="200dp"
            android:src="@drawable/shop_logo"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/store_name"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/intro_first"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:textAllCaps="true"
            android:textColor="@color/buttonWhite"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/intro_second"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/buttonWhite"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
           />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btnloginbg"
            android:layout_marginTop="140dp"
            android:text="@string/btnLogin"
            android:textSize="18sp"
            android:textColor="@color/buttonWhite"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:id="@+id/btnUserLogin"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btnsignupbg"
            android:layout_marginTop="14dp"
            android:text="@string/btnSignup"
            android:textSize="18sp"
            android:textColor="@color/buttonWhite"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:id="@+id/btnSignup"
            />
    </LinearLayout>



</LinearLayout>